--- a/src/app/crew/crew.component.html
+++ b/src/app/crew/crew.component.html
@@ -2,6 +2,7 @@
 <ul>
   <li *ngFor="let member of crew">{{member.name}}
     <span *ngIf="member.firstMission">- 1st</span>
+    <button (click)="remove(member)">remove</button>
   </li>
 </ul>
 
